--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <h2>About Me</h2>
 
 
-      <img src="assets/images/James.jpg" alt="James Headshot" style="width:200px;height:200px">
+      <img src="assets/images/James.jpg" alt="James Headshot" style="width:200px;height:200px;margin:10px;">
 
       <p>Hey, I'm James.  Welcome to my website - I designed it myself!  I'm currently enrolled in a full stack coding bootcamp through Vanderbilt University with the hope of becoming a professional web developer by the end of 2020.  With the world in its current state of turmoil it's hard to predict the future, but this is a dream I'm trying my hardest to keep alive!  Quarantine is a good time to practice coding.</p>
       <p>I live in Nashville with my family.  For the last 13 years I've worked in the music business, but not the part you might think - I've been mostly a classical musician.  I played Principal Clarinet of the Nashville Symphony for twelve years, and I was also an active educator, clinician, and studio musician.  It was a fun stretch of life being a full-time musician, but I think it's the perfect time to change gears.  I'm enjoying the challenge of learning to code - it's like learning a new instrument!</p>
